--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,14 @@
  .second-page .NavBar{
     height: 65px;
     width: 100%;
-    background-color: #2e6963;
+    background-color: #0b9496;
     padding: 10px;
     font-size: 15px;
 }
 .second-page .NavBar .contener img{
     padding: 5px;
 }
+
 
 .second-page .contener {
     margin-left: 350px;
@@ -44,13 +45,21 @@
 .second-page .contener .map-box .map{
     height: 50vh;
     width: 100%;
-    float: left;
+   
 }
 .map-box{
     position: relative;
 }
+.second-page .contener .map-box .resImg img{
+    position: absolute;
+    z-index: 1000;
+    margin: 20px;
+    top: 40px;
+    border-radius: 8px;
+    
+}
 .btn-suggestion{
-    background-color: #2e6963;
+    background-color: #0b9496;
     width:330px;
     height:60px;
     display: block;
@@ -65,6 +74,9 @@
     cursor: pointer;
     
 }
+.btn-suggestion:hover{
+    background-color: #2f9ea0;
+}
 
  .second-page .contener .map-box .btn-googleMap{
     
@@ -74,25 +86,64 @@
     border-radius: 30px;
     border: none;
     position: absolute;
-    left: 260px;
+    left: 30px;
     top: 200px;
-    z-index: 800;
-    background-color: white;
-    color: gray;
+    z-index: 1000;
+    background-color: #fafafaf3;
     text-align: center;
     font-size: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.second-page .contener .map-box .btn-googleMap button{
+    width:200px;
+    height:50px;
+    border-radius: 30px;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+}
+.btn-googleMap {
+    color: gray;
+}
+.btn-googleMap:hover {
+    color: #424242ed;
 }
 .second-page .contener  a{
     text-decoration: none;
-    color:#2e6963;
     text-align: center;
+}
+.restrant-name{
+    color:#0c8b8d;
+}
+.restrant-name:hover{
+    color: #2f9ea0;
 }
 .second-page .contener .ResNav p{
     color: gray;
 }
 
 .footer{
-    
-    height: 550px;
+    height: 150px;
     background-color: rgb(255, 255, 255, 0.8);
+}
+/*---loading icon----*/
+.loader {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #0c8b8d; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+  
+
+}
+.loader{
+    position: absolute;
+    margin-right: 330px;
+    margin-top: 50px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
