--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
     padding: 5px;
 }
 
-
 .second-page .contener {
     margin-left: 350px;
     margin-right:350px ;
@@ -45,7 +44,6 @@
 .second-page .contener .map-box .map{
     height: 50vh;
     width: 100%;
-   
 }
 .map-box{
     position: relative;
@@ -55,8 +53,7 @@
     z-index: 1000;
     margin: 20px;
     top: 40px;
-    border-radius: 8px;
-    
+    border-radius: 8px; 
 }
 .btn-suggestion{
     background-color: #0b9496;
@@ -71,13 +68,11 @@
     top:320px;
     left:200px;
     font-size: 25px;
-    cursor: pointer;
-    
+    cursor: pointer;  
 }
 .btn-suggestion:hover{
     background-color: #2f9ea0;
 }
-
  .second-page .contener .map-box .btn-googleMap{
     
     width:200px;
@@ -99,13 +94,13 @@
     height:50px;
     border-radius: 30px;
     border: none;
-    font-size: 15px;
+    font-size: 16px;
     cursor: pointer;
 }
-.btn-googleMap {
+.btn-googleMap button {
     color: gray;
 }
-.btn-googleMap:hover {
+.btn-googleMap button:hover {
     color: #424242ed;
 }
 .second-page .contener  a{
